--- a/app/src/main/res/layout/dialog_stop_point_info.xml
+++ b/app/src/main/res/layout/dialog_stop_point_info.xml
@@ -4,17 +4,24 @@
     android:background="@drawable/roundedborder2"
     android:padding="5dp"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:textStyle="bold"
         android:textColor="#068f41"
-        android:textSize="30sp"
+        android:textSize="25sp"
         android:id="@+id/stop_point_info_name"
         android:text="NameTour"
+        android:padding="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="#D6D6D6"/>
     <LinearLayout
         
         android:orientation="horizontal"
