--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="match_parent">
 
     <fragment
         android:id="@+id/map_follow_tour"
@@ -12,14 +12,26 @@
         android:layout_height="match_parent"
         tools:context=".MapsActivity" />
 
-    <ImageView
-        android:id="@+id/map_btn_cur_location"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentEnd="false"
         android:layout_alignParentRight="true"
-        android:layout_margin="10dp"
-        app:srcCompat="@drawable/btn_gps_bg"
+        android:orientation="vertical">
 
-        />
+        <ImageView
+            android:id="@+id/map_btn_cur_location"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_margin="10dp"
+            app:srcCompat="@drawable/btn_gps_bg"
+            />
+
+        <ImageView
+            android:id="@+id/map_btn_direction"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_margin="10dp"
+            app:srcCompat="@drawable/ic_directions_black_24dp" />
+    </LinearLayout>
 </RelativeLayout>
