--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -11,27 +11,53 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MapsActivity" />
-
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        >
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/circle_bg_btn">
+            <ImageView
+                android:id="@+id/show_warning_notification"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                app:srcCompat="@drawable/ic_warning_black_24dp"
+                android:layout_margin="5dp"
+                />
+        </LinearLayout>
+    </LinearLayout>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="false"
         android:layout_alignParentRight="true"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp">
 
         <ImageView
             android:id="@+id/map_btn_cur_location"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_margin="10dp"
             app:srcCompat="@drawable/btn_gps_bg"
             />
 
-        <ImageView
-            android:id="@+id/map_btn_direction"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_margin="10dp"
-            app:srcCompat="@drawable/ic_directions_black_24dp" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/circle_bg_btn"
+            android:layout_marginTop="10dp">
+
+            <ImageView
+                android:id="@+id/map_btn_direction"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_margin="5dp"
+                app:srcCompat="@drawable/ic_directions_black_24dp" />
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
