--- a/app/src/main/res/layout/list_view_destination_item.xml
+++ b/app/src/main/res/layout/list_view_destination_item.xml
@@ -43,6 +43,8 @@
                 app:srcCompat="@drawable/ic_info_outline_black_24dp"
                 android:layout_gravity="center"
                 android:layout_marginRight="20dp"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
                 />
             <Switch
                 android:id="@+id/switch_select_destination"
@@ -50,6 +52,8 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_marginRight="10dp"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
                 />
 
 
